--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -106,8 +106,8 @@ img {
   margin: 10px;
   position: relative;
   background: #333;
-  width: 400px;
-  height: 79vh;
+  width: 300px;
+  height: 70vh;
   border-radius: 6px;
   padding: 2rem;
   color: #aaa;
@@ -124,7 +124,7 @@ img {
 .card__image {
   opacity: 0;
   animation: ImageFadeIn 0.8s 1.4s forwards;
-  height: 350px;
+  height: 300px;
 }
 .card__title {
   color: white;
@@ -202,9 +202,8 @@ img {
   height: 30px;
   float: right;
 }
-.Collapsible__contentInner {
-  padding: 10px;
-  border: 1px solid #ebebeb;
+.Collapsible__contentInner {  
+  border: 1px solid #008cba;
   border-top: 0;
   overflow-y:scroll;
 }
@@ -223,7 +222,7 @@ img {
   text-decoration: none;
   color: #333333;
   position: relative;
-  border: 1px solid white;
+  border: 1px solid #008cba;
   padding: 10px;
   background: rgb(36, 71, 122);
   color: white;
@@ -313,8 +312,8 @@ img {
   color: #FFFFFF;
   text-align: center;
   font-size: 16px;  
-  width: 120px;
-  height: 55px;
+  width: 80px;
+  height: 40px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;  
@@ -338,7 +337,7 @@ img {
 }
 
 .button:hover span {
-  padding-right: 25px;
+  padding-right: 15px;
 }
 
 .button:hover span:after {
@@ -349,11 +348,24 @@ img {
 .buttonSignup {
   background-color: #008CBA; /* Green */
   border: none;
-  color: white;
-  padding: 15px 32px;
+  color: white;  
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   border-radius: 5px;
+  width: 80px;
+  height: 40px;
+}
+
+.filterList ul {
+  list-style-type: none;
+  color:white;
+}
+
+.filter-label {
+  padding-left: 10px;
+  text-align: left;
+  background-color: #008CBA;
+  width: 100%;
 }
